--- a/public/simon-plus/index.html
+++ b/public/simon-plus/index.html
@@ -31,50 +31,46 @@
             <form method="post" action="/api/subscriptions/new" class="billing-form billing-form--credit" novalidate="">
               <div>
                 <fieldset class="plans">
-                  <div>
+                  <div class="focus-alt">
                     <div tabindex="0" class="plan">
-                      <input id="MONTH-0" type="radio" aria-checked="false" role="radio" class="plan-select gXkExL" value="monthly" checked="" data-recurly="plan" name="plan-code">
-                      <label aria-labelledby="MONTH-0" for="MONTH-0" class="vVxKs">
+                      <input id="MONTH-0" type="radio" aria-checked="true" role="radio" value="monthly" checked="" data-recurly="plan" name="plan-code">
+                      <label aria-labelledby="MONTH-0" for="MONTH-0" class="cursor-ptr">
                         <span><p class="" style="color: rgb(249, 249, 249); letter-spacing: initial; line-height: 1.53; font-family: Avenir-Heavy, sans-serif; font-size: 15px; margin: 0px; max-width: inherit;">Monthly</p>
                           <div color="grey7" class="fine-print" style="color: rgb(202, 202, 202); margin: 0px;">$7.99</div>
                         </span>
                         <div class="radio-check">
-                          <div class="">
-                            <svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;">
-                              <path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="dGwULW"></path>
-                            </svg>
-                          </div>
+                          <svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;">
+                            <path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="dGwULW"></path>
+                          </svg>
                         </div>
                       </label>
                     </div>
                     <div tabindex="0" class="plan">
-                      <input id="YEAR-1" type="radio" aria-checked="true" role="radio" class="plan-select" value="yearly" data-recurly="plan" name="plan-code">
-                      <label aria-labelledby="YEAR-1" for="YEAR-1" class="">
+                      <input id="YEAR-1" type="radio" aria-checked="false" role="radio" value="yearly" data-recurly="plan" name="plan-code">
+                      <label aria-labelledby="YEAR-1" for="YEAR-1" class="cursor-ptr">
                         <span><p class="" style="color: rgb(249, 249, 249); letter-spacing: initial; line-height: 1.53; font-family: Avenir-Heavy, sans-serif; font-size: 15px; margin: 0px; max-width: inherit;">Annual</p>
                           <div color="grey7" class="fine-print" style="color: rgb(202, 202, 202); margin: 0px;">$79.99</div>
                         </span>
                         <div class="radio-check">
-                          <div class="">
-                            <svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;">
-                              <path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="dGwULW"></path>
-                            </svg>
-                          </div>
+                          <svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;">
+                            <path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="dGwULW"></path>
+                          </svg>
                         </div>
                       </label>
                     </div>
                   </div>
                 </fieldset>
                 <fieldset class="payment-types">
-                  <div class="fine-print">
+                  <div class="fine-print focus-alt">
                     <div aria-label="Credit Card" role="radio" aria-checked="true" tabindex="0" class="payment-type">
                       <input id="credit-radio-icon" type="radio" aria-checked="true" name="paymentOptions" role="radio" class="hidden credit-card" value="CREDIT" checked="">
-                      <label aria-labelledby="credit-radio-icon" for="credit-radio-icon" class="hyOFEv">
+                      <label aria-labelledby="credit-radio-icon" for="credit-radio-icon" class="cursor-ptr">
                         <span><i class="icon" role="img"></i>Credit Card</span>
                       </label>
                     </div>
                     <div aria-label="PayPal" role="radio" aria-checked="false" tabindex="0" class="payment-type">
                       <input id="paypal-radio-icon" type="radio" aria-checked="false" name="paymentOptions" role="radio" class="hidden paypal" value="PAYPAL">
-                      <label aria-labelledby="paypal-radio-icon" for="paypal-radio-icon" class="hyOFEv">
+                      <label aria-labelledby="paypal-radio-icon" for="paypal-radio-icon" class="cursor-ptr">
                         <span><i class="icon" role="img"></i>PayPal</span>
                       </label>
                     </div>
@@ -113,10 +109,11 @@
                       <button aria-label="Learn more" color="secondary" font-size="inherit" font-weight="inherit" type="button" class="button-link">Learn more</button>
                     </span>
                   </div>
-                  <div>
+                  <div class="focus-alt">
                     <label aria-label="Store my payment information for use across the Simon Family of Companies." aria-pressed="false" for="savePayment" tabindex="0" class="w100 flex flex-align-center flex-row-reverse" style="justify-content: flex-end; margin: 0px auto; padding: 0">
                       <div class="flex flex-align-center">
-                        <div><input aria-checked="false" id="savePayment" role="switch" type="checkbox" class="hidden" value="">
+                        <div>
+                          <input aria-checked="false" id="savePayment" role="switch" type="checkbox" class="hidden" value="">
                           <span for="savePayment" class="toggle"></span>
                         </div>
                       </div>
