--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
         <li><a href="advanced-tax/index.html">Advanced tax features</a></li>
         <li><a href="advanced-bank-account/index.html">Advanced bank account</a></li>
         <li><a href="apple-pay/index.html">Apple Pay</a></li>
+        <li><a href="bank-redirect/index.html">Bank Redirect</a></li>
         <li><a href="paypal/index.html">PayPal</a></li>
         <li><a href="fraud-detection/recurly-kount.html">Fraud detection (Recurly and Kount direct integrations)</a></li>
         <li><a href="fraud-detection/braintree.html">Fraud detection (Braintree integration)</a></li>
