--- a/public/bank-redirect/index.html
+++ b/public/bank-redirect/index.html
@@ -44,8 +44,8 @@
     });
 
     // Listen for successful banks response
-    bankRedirect.on('banks', function (response) {
-      console.log('BANKS: ', response.banks);
+    bankRedirect.on('banks', function (banks) {
+      console.log('BANKS: ', banks);
     });
 
     // If an error occurs loading the banks, log it
