Requesting the config

--- a/public/bank-redirect/index.html
+++ b/public/bank-redirect/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://js.recurly.com/v4/recurly.js"></script>
+  <script src="/config"></script>
 </head>
 
 <body>
